# kaspa-tracker-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  kaspa_tracker.db  pyproject.toml  run.py
protos/: kaspa_rpc.proto  rpc.proto
src/bot/: bot.py  bot_callbacks.py  bot_ui.py  formatting.py
src/clients/: kaspa_api.py  kaspa_grpc.py
src/db/: database.py  migrations.py
src/protos/: messages_pb2.py  messages_pb2.pyi  messages_pb2_grpc.py  rpc_pb2.py  rpc_pb2.pyi  rpc_pb2_grpc.py
